# HK_BIN_TOOL

./: BIN_Data_Func.cpp  BIN_Data_Func.h  CMakeLists.txt  EDID_Func.cpp  EDID_Func.h  hk_bin_tool.cpp  hk_bin_tool.h  hk_bin_tool.ui  main.cpp
